# rusty-whisper

./: Cargo.toml  README.md
src/: lib.rs  tokenizers.rs
